test/parser/string-literal-ends-in-backslash.delta
// RUN: not %delta -parse %s | %FileCheck %s

// CHECK: [[@LINE+2]]:15: error: newline inside string literal
// CHECK: {{^              \^$}}
var a = "   \"
